unpackaged/main/default/objects/pse__VersionItem_Issue__c/pse__VersionItem_Issue__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__VersionHelp</customHelpPage>
    <description>A capture of a project issue taken at the time the version is created.</description>
    <label>Version Item Issue</label>
    <nameField>
        <displayFormat>PVI-{0000}</displayFormat>
        <label>Version Item Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Version Item Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>