unpackaged/main/default/objects/pse__VersionItem_Issue__c/fields/pse__AccountName__c.field-meta.xml
<CustomField>
    <fullName>pse__AccountName__c</fullName>
    <description>The name of the account relating to the issue referenced in the project version.</description>
    <inlineHelpText>TThe name of the account relating to the issue referenced in the project version.</inlineHelpText>
    <label>Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>