unpackaged/main/default/objects/pse__VersionItem_Issue__c/fields/pse__Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>pse__Action_Plan__c</fullName>
    <description>A description for the plan of action against the issue referenced in the project version.</description>
    <inlineHelpText>A description for the plan of action against the issue referenced in the project version.</inlineHelpText>
    <label>Action Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>