unpackaged/main/default/objects/pse__VersionItem_Issue__c/fields/pse__Comments__c.field-meta.xml
<CustomField>
    <fullName>pse__Comments__c</fullName>
    <description>Additional comments about the issue referenced in the project version.</description>
    <inlineHelpText>Additional comments about the issue referenced in the project version.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>