unpackaged/main/default/objects/pse__VersionItem_Issue__c/fields/pse__Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>pse__Issue_Number__c</fullName>
    <description>A unique auto-generated reference for the issue referenced in the project version.</description>
    <inlineHelpText>A unique auto-generated reference for the issue referenced in the project version.</inlineHelpText>
    <label>Issue Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>