unpackaged/main/default/objects/pse__VersionItem_Issue__c/fields/pse__IssueOwnerName__c.field-meta.xml
<CustomField>
    <fullName>pse__IssueOwnerName__c</fullName>
    <description>The name of the resource assigned as the owner of the issue referenced in the project version.</description>
    <inlineHelpText>The name of the resource assigned as the owner of the issue referenced in the project version.</inlineHelpText>
    <label>Issue Owner Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>