unpackaged/main/default/objects/pse__VersionItem_Issue__c/fields/pse__MilestoneId__c.field-meta.xml
<CustomField>
    <fullName>pse__MilestoneId__c</fullName>
    <description>The Id of the milestone relating to the issue referenced in the project version.</description>
    <inlineHelpText>The Id of the milestone relating to the issue referenced in the project version.</inlineHelpText>
    <label>Milestone Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>