unpackaged/main/default/objects/pse__VersionItem_Issue__c/fields/pse__OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>pse__OpportunityId__c</fullName>
    <description>The Id of the opportunity relating to the issue referenced in the project version.</description>
    <inlineHelpText>The Id of the opportunity relating to the issue referenced in the project version.</inlineHelpText>
    <label>Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>