unpackaged/main/default/objects/pse__VersionItem_Issue__c/fields/pse__OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>pse__OpportunityName__c</fullName>
    <description>The name of the opportunity relating to the issue referenced in the project version.</description>
    <inlineHelpText>The name of the opportunity relating to the issue referenced in the project version.</inlineHelpText>
    <label>Opportunity Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>