unpackaged/main/default/objects/pse__VersionItem_Issue__c/fields/pse__ProjectTaskId__c.field-meta.xml
<CustomField>
    <fullName>pse__ProjectTaskId__c</fullName>
    <description>The Id for the project task relating to the issue referenced in the project version.</description>
    <inlineHelpText>The Id for the project task relating to the issue referenced in the project version.</inlineHelpText>
    <label>Project Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>