unpackaged/main/default/objects/pse__VersionItem_Issue__c/fields/pse__Risk_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__Risk_Id__c</fullName>
    <description>The Id of the risk associated with the issue referenced in the project version.</description>
    <inlineHelpText>The Id of the risk associated with the issue referenced in the project version.</inlineHelpText>
    <label>Risk Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>