unpackaged/main/default/objects/pse__VersionItem_Issue__c/fields/pse__Version__c.field-meta.xml
<CustomField>
    <fullName>pse__Version__c</fullName>
    <description>A lookup to the project version.</description>
    <inlineHelpText>A lookup to the project version.</inlineHelpText>
    <label>Version</label>
    <referenceTo>pse__Version__c</referenceTo>
    <relationshipLabel>Version Item Issues</relationshipLabel>
    <relationshipName>VersionItem_Issues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>